--- a/Visualization.html
+++ b/Visualization.html
@@ -18,8 +18,9 @@
 
 
     <!-- Latest compiled d3.js -->
-    <script src="http://d3js.org/d3.v3.min.js"></script>
-    <script src="http://d3js.org/topojson.v0.min.js"></script>
+    <script src="http://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <script src="http://d3js.org/topojson.v2.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
