--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <!-- Bootstrap library -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
     <!-- CSS File -->
     <link rel="stylesheet" href="./Style/HappinessVis.css">
 
@@ -18,9 +15,9 @@
 
 
     <!-- Latest compiled d3.js -->
-    <script src="http://d3js.org/d3.v4.min.js"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script src="http://d3js.org/topojson.v2.min.js"></script>
+    <script src="https://d3js.org/topojson.v2.min.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
