--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Happiness Visualization</title>
 
     <!-- CSS File -->
     <link rel="stylesheet" href="./Style/HappinessVis.css">
