updated calls to d3 libraires to https in index file

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
     </div>
     <div class="container-fluid index-container">
         <div class="index-body" id="happiness-map"></div>
-        <div class="description"></div>
+        <!--<div class="description"></div>-->
     </div>
     <div class="container-fluid index-container">
         <div class="index-body" id="corruption-map"></div>
-        <div class="description"></div>
+        <!--<div class="description"></div>-->
     </div>
 
 
