started working on the correlation using the scatterplot

--- a/index.html
+++ b/index.html
@@ -27,15 +27,21 @@
     <div class="container-fluid header">
         <!--<div class="header-body inner"></div>-->
     </div>
+
     <div class="container-fluid index-container">
         <div class="index-body" id="happiness-map"></div>
         <!--<div class="description"></div>-->
     </div>
+
     <div class="container-fluid index-container">
         <div class="index-body" id="corruption-map"></div>
         <!--<div class="description"></div>-->
     </div>
 
+    <div class="container-fluid index-container">
+        <div class="index-body" id="scatter-map"></div>
+        <!--<div class="description"></div>-->
+    </div>
 
     <!-- Javascript File -->
     <script src="./JS/HappinessVis.js"></script>
